# rustblog

./: .gitignore  Cargo.toml  Makefile.toml  README.md  Shuttle.toml  Trunk.toml  package-lock.json  package.json  tailwind.config.js
.sqlx/: query-c40f3130672fdf2c87fcc1a4978e0b15dcd618a61bd9dbb22c123a872da7ccc4.json
crates/backend/auth/: Cargo.toml
crates/backend/auth/src/: error.rs  lib.rs
crates/backend/db/: Cargo.toml
crates/backend/db/migrations/: 20240501010315_add_update_timestamp_function.down.sql  20240501010315_add_update_timestamp_function.up.sql  20240501010400_add_users_table.up.sql  20240501012124_add_posts_table.up.sql  20240501020250_add_categories_table.up.sql  20240501035409_add_post_categories_table.down.sql  20240501035409_add_post_categories_table.up.sql  20240501041416_add_tags_table.down.sql  20240501041416_add_tags_table.up.sql  20240501042528_add_post_tags_table.down.sql  20240501042528_add_post_tags_table.up.sql
crates/backend/db/src/: error.rs  lib.rs  repository.rs
crates/backend/db/src/repository/: users.rs
crates/backend/server/: Cargo.toml
crates/backend/server/src/: error.rs  lib.rs  main.rs  router.rs
crates/backend/server/src/router/: auth.rs  static_file.rs
crates/frontend/front/: Cargo.toml  index.html
crates/frontend/front/src/: app.rs  components.rs  main.rs  pages.rs  router.rs  test.rs
crates/frontend/front/src/components/: common.rs  video_details.rs  videos_list.rs
crates/frontend/front/src/components/common/: auth_form.rs  input_field.rs  navbar.rs
crates/frontend/front/src/pages/: home.rs  login.rs  test.rs
