[workspace]
members = [ 
    "crates/backend/auth", 
    "crates/backend/db",
    "crates/backend/server"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

[workspace.dependencies]
# backend
axum = "0.7.5"
shuttle-axum = "0.42"
shuttle-runtime = "0.42"
shuttle-shared-db = {version = "0.42", features = ["sqlx", "postgres"]}
sqlx = {version = "0.7.4", default-features = false}
jsonwebtoken = "9.3.0"
serde = {version = "1.0.0", features = ["derive"]}
