[package]
name = "auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# jsonwebtoken = { workspace = true }
# serde = { workspace = true }

[dependencies]
jsonwebtoken = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono  = { workspace = true }
thiserror = { workspace = true }