[package]
name = "server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
shuttle-axum = { workspace = true }
shuttle-runtime = { workspace = true }