[package]
name = "server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
shuttle-axum = { workspace = true }
shuttle-runtime = { workspace = true }
shuttle-shared-db = { workspace = true }
shuttle-secrets = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "macros"]}
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
argon2 = { workspace = true }
password-hash = { workspace = true }
uuid = { workspace = true }
tower-http = { workspace = true }

auth = { path = "../auth"}
db = { path = "../db/"}