[package]
name = "front"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { workspace = true }
yew-router = { workspace = true }
wasm-bindgen = { workspace = true }
gloo-net = "0.5.0"
wasm-bindgen-futures = "0.4.42"
serde = { workspace = true }
